# spacerama

./: Cargo.toml
.github/workflows/: rust.yml
assets/config/compile/: network_settings.ron
assets/models/ships/: ship_001.glb
src/: apps.rs  cli.rs  game.rs  main.rs  networking_shared.rs  server.rs  visual.rs
src/game/: action_event_data.rs  mod.rs  network_plugin.rs  physics_plugin.rs  plugin_group.rs  ship_plugin.rs  states_plugin.rs
src/game/network_plugin/: client_plugin.rs  compile_config.rs  compiled_config.rs  network_config.rs  server_plugin.rs  shared_config.rs
src/networking_shared/: channels.rs  protocol.rs
src/server/: resources.rs  server_plugin.rs
src/visual/: editor_inspector_plugin.rs  input_plugin.rs  plugin_group.rs  rendering_setup_plugin.rs  ship_plugin.rs
