[package]
name = "spacerama"
description = "A open world multiplayer space adventure game where the journey is the destination."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
development = ["hot_reloading", "debug_physics"]
debug_physics = ["bevy_xpbd_3d/debug-plugin"]
hot_reloading = ["bevy/file_watcher"]

[dependencies]
bevy = "0.14"

bevy_rand = "0.7"
bevy_prng = { version = "0.7", features = ["wyrand"] }
rand_core = "0.6"

bevy_xpbd_3d = "0.5"

bevy_ggrs = "0.16"
# ggrs = "0.10"
# ggrs = { git = "https://github.com/gschup/ggrs.git" }
bytemuck = { version = "1.7", features = ["derive"] }

leafwing-input-manager = "0.14"

bevy_asset_loader = "0.21"

derive_more = "0.99"
itertools = "0.13"
derivative = "2.2"
clap = { version = "4.5", features = ["derive"] }

autodefault = "2.0"

# cfg debug
bevy_debug_grid = "0.6"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[lints.rust]
unused_results = "warn"
future-incompatible = "warn"
rust-2024-compatibility = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
# restriction = "warn"
nursery = "warn"
# cargo = "warn"
# separated_literal_suffix = "allow"
# implicit_return = "allow"
# bool_assert_comparison = "allow"
# suboptimal_flops = "allow"
# semicolon_outside_block = "allow"
# single_call_fn = { level = "allow", priority = 1 }  # restriction
# implicit_return = { level = "allow", priority = 1 }  # restriction
# arithmetic-side-effects = "allow"  # restriction
unwrap-used = "warn"
non_ascii_literal = "warn"
indexing_slicing = "warn"
redundant_type_annotations = "warn"
absolute-paths = "warn"

# For Prototyping only
missing-docs-in-private-items = "allow"
