[package]
name = "spacerama"
description = "A open world multiplayer space adventure game where the journey is the destination."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
development = ["hot_reloading", "debug_physics", "inspector"]
inspector = []
debug_physics = ["avian3d/debug-plugin"]
hot_reloading = ["bevy/file_watcher"]

[dependencies]
bevy = "0.14.2"

bevy_rand = "0.7"
bevy_prng = { version = "0.7", features = ["wyrand"] }
rand_core = "0.6"
rand = "0.8"

avian3d = "0.1"

# leafwing 0.15 seems to have a bunch of breaking issues in the new version in
# regards to axis handling and button being exclusive yet no way to map triggers
# and other analog gamepad buttons to axis or allow keyboard buttons to map to
# the same actions.
leafwing-input-manager = "0.14"

bevy_asset_loader = "0.21"

derive_more = { version = "1.0", features = ["add_assign", "mul", "display"] }
itertools = "0.13"
derivative = "2.2"
clap = { version = "4.5", features = ["derive"] }

lightyear = "0.17"

serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"

autodefault = "2.0"

# cfg debug
bevy_debug_grid = "0.6"

# cfg editor
bevy-inspector-egui = "0.25"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[lints.rust]
unused_results = "warn"
future-incompatible = "warn"
rust-2024-compatibility = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# restriction = "warn"
nursery = { level = "warn", priority = -1 }
# cargo = "warn"
# separated_literal_suffix = "allow"
# implicit_return = "allow"
# bool_assert_comparison = "allow"
# suboptimal_flops = "allow"
# semicolon_outside_block = "allow"
# single_call_fn = { level = "allow", priority = 1 }  # restriction
# implicit_return = { level = "allow", priority = 1 }  # restriction
# arithmetic-side-effects = "allow"  # restriction
unwrap-used = "warn"
non_ascii_literal = "warn"
indexing_slicing = "warn"
redundant_type_annotations = "warn"
absolute-paths = "warn"

# For Prototyping only
missing-docs-in-private-items = "allow"
missing_trait_methods = "allow"
